fix word wrap for text block in iPad overview

--- a/Source/Stylesheets/_WFPresentationDiscrete.scss
+++ b/Source/Stylesheets/_WFPresentationDiscrete.scss
@@ -62,6 +62,11 @@ html.wf-presentation-discrete {
 				
 					color: rgb(77, 77, 77);
 				
+					&.textContainer {
+
+						white-space: pre-wrap;
+
+					}
 				}
 				
 				.textContainer {
